sample welcome page displays, added loading splash
Co-authored-by: Angel <angeltorres.dev@gmail.com>

--- a/fifthdev/app.json
+++ b/fifthdev/app.json
@@ -12,6 +12,9 @@
       "ios",
       "android",
       "web"
-    ]
+    ],
+    "splash": {
+      "image": "./assets/images/fifth.png"
+    }
   }
 }
