--- a/fifthdev/package.json
+++ b/fifthdev/package.json
@@ -14,8 +14,9 @@
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-google-signin": "^2.0.0",
     "react-native-reanimated": "~1.2.0",
-    "react-native-screens": "1.0.0-alpha.23",
+    "react-native-screens": "^1.0.0-alpha.23",
     "react-native-unimodules": "~0.5.4",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
